--- a/APPLICATION/frontend/src/main/resources/templates/login.html
+++ b/APPLICATION/frontend/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="fragments/header.html :: html-head(title='Log In!')"></head>
 
